--- a/index.html
+++ b/index.html
@@ -55,28 +55,28 @@
 		<div class="container mx-auto px-4">
 			<h2 class="text-2xl font-bold text-center mb-12">Explore Subjects</h2>
 			<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
-				<a href="subjects/math.html" class="subject-card bg-white rounded-lg overflow-hidden shadow-md border border-gray-100 block">
+				<a href="math.html" class="subject-card bg-white rounded-lg overflow-hidden shadow-md border border-gray-100 block">
 					<div class="p-6">
 						<h3 class="text-xl font-semibold mb-2">Mathematics</h3>
 						<p class="text-gray-600 mb-4">Numbers, Algebra, Geometry basics with practice questions.</p>
 						<span class="text-green-700 font-medium">Open →</span>
 					</div>
 				</a>
-				<a href="subjects/science.html" class="subject-card bg-white rounded-lg overflow-hidden shadow-md border border-gray-100 block">
+				<a href="science.html" class="subject-card bg-white rounded-lg overflow-hidden shadow-md border border-gray-100 block">
 					<div class="p-6">
 						<h3 class="text-xl font-semibold mb-2">Science</h3>
 						<p class="text-gray-600 mb-4">Biology, Physics, Chemistry fundamentals and quiz.</p>
 						<span class="text-green-700 font-medium">Open →</span>
 					</div>
 				</a>
-				<a href="subjects/english.html" class="subject-card bg-white rounded-lg overflow-hidden shadow-md border border-gray-100 block">
+				<a href="english.html" class="subject-card bg-white rounded-lg overflow-hidden shadow-md border border-gray-100 block">
 					<div class="p-6">
 						<h3 class="text-xl font-semibold mb-2">English & Literature</h3>
 						<p class="text-gray-600 mb-4">Grammar and comprehension essentials with examples.</p>
 						<span class="text-green-700 font-medium">Open →</span>
 					</div>
 				</a>
-				<a href="subjects/history.html" class="subject-card bg-white rounded-lg overflow-hidden shadow-md border border-gray-100 block">
+				<a href="history.html" class="subject-card bg-white rounded-lg overflow-hidden shadow-md border border-gray-100 block">
 					<div class="p-6">
 						<h3 class="text-xl font-semibold mb-2">Ghanaian History</h3>
 						<p class="text-gray-600 mb-4">From ancient kingdoms to independence.</p>
@@ -93,4 +93,5 @@
 		</div>
 	</footer>
 </body>
+
 </html>
